--- a/pkgs/sagemath-combinat/tox.ini
+++ b/pkgs/sagemath-combinat/tox.ini
@@ -74,7 +74,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_combinat'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_combinat --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --installed'
+    !notest:                 && sage-runtests -p --verbose --force-lib --initial --environment=sage.all__sagemath_combinat --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --installed'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
