--- a/pkgs/sagemath-schemes/MANIFEST.in
+++ b/pkgs/sagemath-schemes/MANIFEST.in
@@ -22,6 +22,7 @@ exclude sage/schemes/hyperelliptic_curves/hypellfrob.pyx
 # Has compile-time dependencies on flint
 exclude sage/modular/modform/eis_series_cython.p*
 exclude sage/modular/modsym/apply.p*
+exclude sage/modular/modsym/p1list.p*
 exclude sage/modular/modsym/heilbronn.p*
 exclude sage/modular/pollack_stevens/dist.p*
 exclude sage/schemes/elliptic_curves/descent_two_isogeny.p*
