pkgs/sagemath-*/tox.ini: Passenv and use SAGE_DOCTEST_OPTIONS

--- a/pkgs/sagemath-benzene/tox.ini
+++ b/pkgs/sagemath-benzene/tox.ini
@@ -49,6 +49,7 @@ extras =
     !notest:                 test
 
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
 
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
@@ -65,7 +66,7 @@ allowlist_externals =
 commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the installed sage package.
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_benzene --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage sage/graphs/graph_generators.py'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_benzene --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS sage/graphs/graph_generators.py'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
@@ -79,6 +80,7 @@ basepython = {env:SAGE_VENV}/bin/python3
 
 [testenv:.pkg-sagepython-sagewheels-nopypi]
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
                              SAGE_VENV
                              SAGE_SPKG_WHEELS
 
