--- a/pkgs/sagemath-graphs/tox.ini
+++ b/pkgs/sagemath-graphs/tox.ini
@@ -54,6 +54,7 @@ extras =
     polyhedra:               polyhedra
 
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
 
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
@@ -76,7 +77,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_graphs'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_graphs --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_graphs --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:--installed}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
@@ -90,6 +91,7 @@ basepython = {env:SAGE_VENV}/bin/python3
 
 [testenv:.pkg-sagepython-sagewheels-nopypi]
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
                              SAGE_VENV
                              SAGE_SPKG_WHEELS
 
