--- a/pkgs/sagemath-combinat/tox.ini
+++ b/pkgs/sagemath-combinat/tox.ini
@@ -53,6 +53,7 @@ extras =
     modules:                 modules
 
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
 
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
@@ -74,7 +75,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_combinat'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_combinat --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --installed'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_combinat --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS --installed'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
@@ -88,6 +89,7 @@ basepython = {env:SAGE_VENV}/bin/python3
 
 [testenv:.pkg-sagepython-sagewheels-nopypi]
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
                              SAGE_VENV
                              SAGE_SPKG_WHEELS
 
