--- a/pkgs/sagemath-coxeter3/tox.ini
+++ b/pkgs/sagemath-coxeter3/tox.ini
@@ -49,6 +49,7 @@ extras =
     !notest:                 test
 
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
 
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
@@ -67,7 +68,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.libs.coxeter3.coxeter'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_combinat --baseline-stats-path={toxinidir}/known-test-failures.json {posargs:sage/algebras/iwahori_hecke_algebra.py sage/categories/coxeter_groups.py sage/combinat/kazhdan_lusztig.py sage/combinat/root_system sage/libs/coxeter3}'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_combinat --baseline-stats-path={toxinidir}/known-test-failures.json $SAGE_DOCTEST_OPTIONS {posargs:sage/algebras/iwahori_hecke_algebra.py sage/categories/coxeter_groups.py sage/combinat/kazhdan_lusztig.py sage/combinat/root_system sage/libs/coxeter3}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
@@ -81,6 +82,7 @@ basepython = {env:SAGE_VENV}/bin/python3
 
 [testenv:.pkg-sagepython-sagewheels-nopypi]
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
                              SAGE_VENV
                              SAGE_SPKG_WHEELS
 
