--- a/pkgs/sagemath-gap/tox.ini
+++ b/pkgs/sagemath-gap/tox.ini
@@ -53,6 +53,7 @@ extras =
     full:                    full
 
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
 
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
@@ -81,7 +82,7 @@ commands =
 
                     bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
                               && status=0 \
-    !notest:                  && echo "::group:Sage doctests"; if ! sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gap --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES {posargs:--installed}; then status=1; fi; echo "::endgroup::" \
+    !notest:                  && echo "::group:Sage doctests"; if ! sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_gap --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:--installed}; then status=1; fi; echo "::endgroup::" \
                               && for package in \
     !full:                                      AClib AutPGrp CRISP Cryst CrystCat FactInt FGA IO LAGUNA PrimGrp ResClasses SmallGrp Sophus utils \
     standard:                                   Alnuth Polenta RadiRoot singular \
@@ -107,6 +108,7 @@ basepython = {env:SAGE_VENV}/bin/python3
 
 [testenv:.pkg-sagepython-sagewheels-nopypi]
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
                              SAGE_VENV
                              SAGE_SPKG_WHEELS
 
