--- a/pkgs/sagemath-libbraiding/tox.ini
+++ b/pkgs/sagemath-libbraiding/tox.ini
@@ -49,6 +49,7 @@ extras =
     !notest:                 test
 
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
 
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
@@ -79,6 +80,7 @@ basepython = {env:SAGE_VENV}/bin/python3
 
 [testenv:.pkg-sagepython-sagewheels-nopypi]
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
                              SAGE_VENV
                              SAGE_SPKG_WHEELS
 
