--- a/pkgs/sagemath-libecm/tox.ini
+++ b/pkgs/sagemath-libecm/tox.ini
@@ -49,6 +49,7 @@ extras =
     !notest:                 test
 
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
 
 setenv =                     {[pkgenv]setenv}
     # Sage scripts such as sage-runtests like to use $HOME/.sage
@@ -66,7 +67,7 @@ commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the installed sage package.
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.libs.libecm; import sage.interfaces.ecm'
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_libecm --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage sage/interfaces/ecm.py sage/libs/libecm.p* sage/rings/integer.pyx'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_libecm --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS sage/interfaces/ecm.py sage/libs/libecm.p* sage/rings/integer.pyx'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
@@ -80,6 +81,7 @@ basepython = {env:SAGE_VENV}/bin/python3
 
 [testenv:.pkg-sagepython-sagewheels-nopypi]
 passenv =                    {[pkgenv]passenv}
+                             SAGE_DOCTEST_OPTIONS
                              SAGE_VENV
                              SAGE_SPKG_WHEELS
 
