--- a/pkgs/sagemath-giac/tox.ini
+++ b/pkgs/sagemath-giac/tox.ini
@@ -70,7 +70,7 @@ commands =
 
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_giac --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS --installed'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_giac --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS {posargs:--installed}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
