--- a/pkgs/sagemath-flint/tox.ini
+++ b/pkgs/sagemath-flint/tox.ini
@@ -67,7 +67,7 @@ commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the install sage package.
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.libs.flint.fmpz_poly'
     !notest:        bash -c 'cd $({envpython} -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_modules --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS --installed'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_modules --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:--installed}'
 
 
 [testenv:.tox]
