--- a/pkgs/sagemath-pari/tox.ini
+++ b/pkgs/sagemath-pari/tox.ini
@@ -68,7 +68,7 @@ commands =
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.libs.pari.all'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_pari --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS --installed'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_pari --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:--installed}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
