--- a/pkgs/sagemath-plot/tox.ini
+++ b/pkgs/sagemath-plot/tox.ini
@@ -68,7 +68,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_plot'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_plot --baseline-stats-path={toxinidir}/known-test-failures.json --installed'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_plot --baseline-stats-path={toxinidir}/known-test-failures.json {posargs:--installed}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
