--- a/pkgs/sagemath-schemes/tox.ini
+++ b/pkgs/sagemath-schemes/tox.ini
@@ -75,7 +75,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.cpython.builtin_types, sage.cpython.cython_metaclass, sage.cpython.debug, sage.structure.all, sage.categories.all, sage.all__sagemath_schemes'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_schemes --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS --installed'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_schemes --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:--installed}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
