pkgs/sagemath-*/tox.ini: Use posargs more

--- a/pkgs/sagemath-brial/tox.ini
+++ b/pkgs/sagemath-brial/tox.ini
@@ -68,7 +68,7 @@ commands =
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_brial; import sage.rings.polynomial.pbori'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_brial --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS sage/crypto sage/rings/polynomial sage/sat'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_brial --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS {posargs:sage/crypto sage/rings/polynomial sage/sat}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
