--- a/pkgs/sagemath-latte-4ti2/tox.ini
+++ b/pkgs/sagemath-latte-4ti2/tox.ini
@@ -66,7 +66,7 @@ allowlist_externals =
 commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the installed sage package.
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_latte_4ti2 --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS sage/geometry/polyhedron sage/interfaces/{four_ti_2,latte}.p*'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_latte_4ti2 --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS {posargs:sage/geometry/polyhedron sage/interfaces/{four_ti_2,latte}.p*}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
