--- a/pkgs/sagemath-maxima/tox.ini
+++ b/pkgs/sagemath-maxima/tox.ini
@@ -68,7 +68,7 @@ commands =
     python -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_maxima'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_maxima --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS sage/interfaces/maxima*.py'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_maxima --baseline-stats-path=$KNOWN_TEST_FAILURES $SAGE_DOCTEST_OPTIONS {posargs:sage/interfaces/maxima*.py}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
