--- a/pkgs/sagemath-msolve/tox.ini
+++ b/pkgs/sagemath-msolve/tox.ini
@@ -68,7 +68,7 @@ commands =
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.all__sagemath_msolve; import sage.rings.polynomial.msolve'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_msolve --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS sage/rings/polynomial/msolve.py sage/rings/polynomial/multi_polynomial_ideal.py'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_msolve --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS {posargs:sage/rings/polynomial/msolve.py sage/rings/polynomial/multi_polynomial_ideal.py}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
