--- a/pkgs/sagemath-rankwidth/tox.ini
+++ b/pkgs/sagemath-rankwidth/tox.ini
@@ -66,7 +66,7 @@ allowlist_externals =
 commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the installed sage package.
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_rankwidth --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS sage/graphs/graph_decompositions/rankwidth.pyx'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_rankwidth --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage $SAGE_DOCTEST_OPTIONS {posargs:sage/graphs/graph_decompositions/rankwidth.pyx}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
