--- a/pkgs/sagemath-repl/tox.ini
+++ b/pkgs/sagemath-repl/tox.ini
@@ -67,7 +67,7 @@ commands =
     # Beware of the treacherous non-src layout. "./sage/" shadows the installed sage package.
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); import sage.repl.all; import sage.doctest.all'
 
-    !notest:        bash -c 'cd $({envpython} -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") && sage-runtests -p --environment=sage.all__sagemath_repl --baseline-stats-path=$KNOWN_TEST_FAILURES --initial --optional=sage $SAGE_DOCTEST_OPTIONS sage/repl sage/doctest sage/misc/sage_input.py sage/misc/sage_eval.py'
+    !notest:        bash -c 'cd $({envpython} -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") && sage-runtests -p --environment=sage.all__sagemath_repl --baseline-stats-path=$KNOWN_TEST_FAILURES --initial --optional=sage $SAGE_DOCTEST_OPTIONS {posargs:sage/repl sage/doctest sage/misc/sage_input.py sage/misc/sage_eval.py}'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
