pkgs/sagemath-libbraiding/tox.ini: posargs

--- a/pkgs/sagemath-libbraiding/tox.ini
+++ b/pkgs/sagemath-libbraiding/tox.ini
@@ -65,7 +65,7 @@ allowlist_externals =
 
 commands =
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_libbraiding --baseline-stats-path={toxinidir}/known-test-failures.json sage/groups/artin.py sage/groups/braid.py sage/knots/link.py sage/libs/braiding.pyx sage/schemes/curves/zariski_vankampen.py'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_libbraiding --baseline-stats-path={toxinidir}/known-test-failures.json $SAGE_DOCTEST_OPTIONS {posargs:sage/groups/artin.py sage/groups/braid.py sage/knots/link.py sage/libs/braiding.pyx sage/schemes/curves/zariski_vankampen.py}'
 
 
 [testenv:.tox]
