.github/workflows/ci-downstream-mingw.yml: Add testing of passagemath-{bliss,tdlib}

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -27,7 +27,8 @@ jobs:
       matrix:
         distribution: >-
           ${{ fromJson(inputs.distributions
-                       || '["sagemath-categories",
+                       || '["sagemath-bliss",
+                            "sagemath-categories",
                             "sagemath-cddlib",
                             "sagemath-cliquer",
                             "sagemath-cmr",
@@ -41,7 +42,8 @@ jobs:
                             "sagemath-objects",
                             "sagemath-planarity",
                             "sagemath-plot",
-                            "sagemath-rankwidth"
+                            "sagemath-rankwidth",
+                            "sagemath-tdlib"
                            ]') }}
         env:
           - ucrt-x86_64
@@ -58,11 +60,13 @@ jobs:
             mingw-w64-${{ matrix.env }}-python-pas${{ matrix.distribution }}
             mingw-w64-${{ matrix.env }}-python-passagemath-repl
             mingw-w64-${{ matrix.env }}-python-tox
+            ${{ matrix.distribution == 'sagemath-bliss'    && format('mingw-w64-{0}-python-passagemath-graphs',  matrix.env) || ''}}
             ${{ matrix.distribution == 'sagemath-cliquer'  && format('mingw-w64-{0}-python-passagemath-graphs',  matrix.env) || ''}}
             ${{ matrix.distribution == 'sagemath-combinat' && format('mingw-w64-{0}-python-passagemath-graphs mingw-w64-{0}-python-passagemath-modules', matrix.env) || ''}}
             ${{ matrix.distribution == 'sagemath-graphs'   && format('mingw-w64-{0}-python-passagemath-modules', matrix.env) || ''}}
             ${{ matrix.distribution == 'sagemath-homfly'   && format('mingw-w64-{0}-python-passagemath-graphs',  matrix.env) || ''}}
             ${{ matrix.distribution == 'sagemath-ntl'      && format('mingw-w64-{0}-python-passagemath-modules', matrix.env) || ''}}
+            ${{ matrix.distribution == 'sagemath-tdlib'    && format('mingw-w64-{0}-python-passagemath-graphs',  matrix.env) || ''}}
           msystem: ${{ contains(matrix.env, 'ucrt') && 'ucrt64' || 'clangarm64' }}
           path-type: inherit
 
